<resources>
    <string name="app_name">quizKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startButton">INIZIA IL QUIZ</string>
    <string name="confirmBtn">INVIA</string>
    <string name="winner_string">BRAVO, TEST SUPERATO</string>
    <string name="play_again_string">GIOCA ANCORA</string>
    <string name="loser_string">CAPRA! VAI A STUDIARE</string>
    <string name="new_question_btn_string">NUOVA DOMANDA</string>
    <string name="question_text_input_string">Scrivi il testo della domanda</string>
    <string name="option_answer1_string">Opzione di risposta 1</string>
    <string name="option_answer2_string">Opzione di risposta 2</string>
    <string name="option_answer3_string">Opzione di risposta 3</string>
    <string name="right_answer_string">Indicare la risposta esatta ( 0 -> 2 )</string>
    <string name="save_question_button_string">INSERISCI</string>
    <string name="show_questions_string">VEDI DOMANDE</string>
    <string name="delete_btn_text">Calcella Domanda</string>
    <string name="edit_question_button_string">AGGIORNA</string>
</resources>